opam-version: "1.2"
maintainer: "Steve Bleazard <stevebleazard@googlemail.com>"
authors: "Steve Bleazard <stevebleazard@googlemail.com>"
homepage: "https://github.com/stevebleazard/ocaml-ppx_deriving_json_jsonm"
bug-reports: "https://github.com/stevebleazard/ocaml-ppx_deriving_json_jsonm/issues"
license: "MIT"
dev-repo: "git://github.com/stevebleazard/ocaml-ppx_deriving_json_jsonm.git"
doc: "http://stevebleazard.github.io/ocaml-ppx_deriving_json_jsonm"
tags: [ "syntax" "json" ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs "@install"]
]
depends: [
  "jsonm"
  "result"
  "ppx_deriving" {>= "4.0" & < "5.0"}
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "ppxfind" {build}
  "ounit"        {test}
  "ppx_import"   {test & >= "1.1"}
]
